# gitpages

./: .gitignore  MANIFEST.in  Pipfile  README  gitweblog.py  main.py  manage.py  pyproject.toml  requirements.pip  requirements.txt  setup.cfg  setup.py  tox.ini
gitpages/: cli.py  commands.py  indexer.py  patches.py  schema.py  stolen.py  util.py
gitpages/storage/: git.py
gitpages/util/: __init__.py  compat.py
gitpages/web/: __init__.py  api.py  application.py  converters.py  exceptions.py  rst.py  schema.py  ui.py
gitpages/web/templates/: base.html  index.html  page-single.html  page.html  page.macros.html  page.sidebar.html
tests/: base.py  test_api.py  test_indexer.py  test_ui.py
web/: api.py  schema.py  ui.py
