[tool.poetry]
name = "GitPages"
version = "0.3"
description = "Git-backed web publishing code"
authors = ["Jordan Yelloz <jordan@yelloz.me>"]
readme = "README.rst"
license = "GPL-2.0-only"

[tool.poetry.dependencies]
python = "^3.8"
docutils = "*"
dulwich = "*"
Flask = "*"
Flask-Failsafe = "*"
Pygments = "*"
python-dateutil = "*"
cachelib = "*"
feedwerk = "*"
typogrify = "*"
Unidecode = "*"
Whoosh = "*"
click = "*"
wrapt = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
iniconfig = "*"
pytest-cov = "*"
coverage = "*"
jedi = "*"
pylint = "*"
mypy = "*"

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
