[tool.poetry]
name = "GitPages"
version = "0.3"
description = "Git-backed web publishing code"
authors = ["Jordan Yelloz <jordan@yelloz.me>"]
readme = "README.rst"
license = "GPL-2.0-only"

[tool.poetry.dependencies]
python = "^3.8"
cachelib = "*"
click = "*"
docutils = "*"
dulwich = "*"
feedwerk = "*"
Flask = "*"
Flask-Failsafe = "*"
Pygments = "*"
python-dateutil = "*"
typogrify = "*"
Unidecode = "*"
Whoosh = "*"
wrapt = "*"

[tool.poetry.dev-dependencies]
coverage = "*"
iniconfig = "*"
jedi = "*"
mypy = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
