[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "GitPages"
version = "0.3"
description = "Git-backed web publishing code"
readme = "README.rst"
authors = [
  { name = "Jordan Yelloz", email = "jordan@yelloz.me" },
]
license = "GPL-2.0-only"
requires-python = ">=3.12"

dependencies = [
  "cachelib",
  "click",
  "docutils",
  "dulwich",
  "feedwerk",
  "flask",
  "flask-failsafe",
  "pygments",
  "python-dateutil",
  "typogrify",
  "unidecode",
  "whoosh",
  "wrapt",
]

[project.optional-dependencies]
dev = [
  "jedi",
  "mypy",
  "pylint",
]

[tool.hatch.build.targets.sdist]
ignore-vcs = true
only-include = ['/gitpages']

[tool.hatch.build.targets.wheel]
ignore-vcs = true
only-include = ['/gitpages']
